traversal.column.traversalbycolumn.TraversalByColumn.scala.code
override def run() {
  var compt:Int=0;
  while (!posiFinal) {
      
  }
}

def posiFinal():Boolean = {
  return (estFaceMur && estDroiteMur && getDirection==Direction.SOUTH)
    
}

def estDroiteMur():Boolean = {
   var a:Boolean=false ;
   gauche;
   a=estFaceMur
   droite ;
  return a
}